--- a/ToDoListApi/ToDoListApi.csproj
+++ b/ToDoListApi/ToDoListApi.csproj
@@ -20,9 +20,11 @@
     <None Remove="FluentValidation" />
     <None Remove="FluentValidation.AspNetCore" />
     <None Remove="Models\" />
+    <None Remove="Services\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="tasks.json" />
