--- a/ToDoListApi/tasks.json
+++ b/ToDoListApi/tasks.json
@@ -1,1 +1,1 @@
-[{"taskId":1,"taskDescription":"Teambuilding at 9 o\u0027clock.","isComplete":false},{"taskId":2,"taskDescription":"Send an e-mail to Anatoliy Rostislavovich.","isComplete":false},{"taskId":3,"taskDescription":"Call to Sofiya and speaking about workshop at 10 o\u0027clock.","isComplete":false}]
+[{"TaskId":0,"TaskDescription":null,"IsComplete":false},{"TaskId":0,"TaskDescription":null,"IsComplete":false},{"TaskId":0,"TaskDescription":null,"IsComplete":false},{"TaskId":1,"TaskDescription":"defs","IsComplete":true}]
